2011-09-25  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv-win.gob, giv-parser.gob : Added tool for counting marks in rectangle.

        * giv-win.gob : Fixed bug that he -join flag wasn't functioning.

2011-09-13  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * Added option to turn off autocontrast on image load.

2011-09-06  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * plugins/fits.c : Fixed bug in the reading of multi slice fits files.

2011-08-03  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * GivRenderer.cc, giv-data.h, giv-parser.cc : Got
        rid of the union used for text annotation.

2011-06-30  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * plugins/SConstruct: Fixed compilation under windows for
        Fedora 15 cross compilation.

        * giv-parser.cc: Changed logic to finish end of input if
        no \n or \r was found at the end of the line.

2011-04-28  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * configure.in : Bumped version to 0.9.19 .

        * plugins/tiff.c : Added support for 1bps files. (First page only).

        * giv-calibrate-dialog.gob : Made the text field change when
        switching between different reference units.

        * giv-win.gob : Made mouse release stop measuring. Was a second
        click.

2011-04-27  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv-win.gob, GivRenderer.h, GivRenderer.cc : Added the
        toggle 'a' that allow toggling the alpha transparency of
        all overlays.

        * giv-win.gob : Added ability to adjust the caliper tool
        after placement.

2011-04-14  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv.wine.nsi.in : Added gtkrc for more windows look.

2011-04-13  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv-settings.gob: Created settings for only seeing files of
        the same type.

        * giv-settings.gob, giv-settings-editor.gob, giv-win.gob :
        Created persistant settings and an editor.
